--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<fragment
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-
-
-</FrameLayout>
+    android:layout_height="match_parent"
+    android:id="@+id/movies_fragment"
+    android:name="br.com.givailson.popularmoviesapp.fragments.GrideMovieFragment"
+    tools:layout="@layout/fragment_grid_movie"/>
