--- a/app/src/main/res/layout/grid_item_movie.xml
+++ b/app/src/main/res/layout/grid_item_movie.xml
@@ -1,22 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:orientation="vertical"
-    android:layout_height="match_parent">
+    android:layout_height="300dp">
 
     <ImageView
+        android:id="@+id/iv_poster"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:contentDescription="eva green"
-        android:scaleType="fitCenter"
-        android:src="@drawable/eva_movie" />
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"/>
 
-    <TextView
-        android:id="@+id/tv_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:textAlignment="center"
-        android:text="Qualquer um é bom"/>
-</LinearLayout>
+</RelativeLayout>
